fix rows on tablet

--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,7 @@ footer {
 		width:48%;
 		float:left;
 		margin:0 0 15px 2%;
+		height:220px;
 	}
 }
 
